--- a/config/keyword.html
+++ b/config/keyword.html
@@ -24,7 +24,7 @@
       <td>chrome</td>
       <td>NaN</td>
       <td>NaN</td>
-      <td>NaN</td>
+      <td>pass</td>
     </tr>
     <tr>
       <td>register_004</td>
@@ -48,91 +48,7 @@
       <td>user_email</td>
       <td>NaN</td>
       <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <td>register_001</td>
-      <td>×¢²á</td>
-      <td>ÊäÈë</td>
-      <td>yes</td>
-      <td>element_send_keys</td>
-      <td>Mushishi</td>
-      <td>user_name</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <td>register_005</td>
-      <td>×¢²á</td>
-      <td>ÊäÈë</td>
-      <td>yes</td>
-      <td>element_send_keys</td>
-      <td>mushishi@qq.com</td>
-      <td>code_text</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <td>register_001</td>
-      <td>×¢²á</td>
-      <td>ÊäÈë</td>
-      <td>yes</td>
-      <td>element_send_keys</td>
-      <td>Mushishi</td>
-      <td>password</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <td>register_002</td>
-      <td>×¢²á</td>
-      <td>µã»÷</td>
-      <td>yes</td>
-      <td>click_element</td>
-      <td>NaN</td>
-      <td>register_button</td>
-      <td>get_element</td>
-      <td>element=password_error</td>
-      <td>fail</td>
-    </tr>
-    <tr>
-      <td>register_004</td>
-      <td>×¢²á</td>
-      <td>ÊäÈëurl</td>
-      <td>no</td>
-      <td>get_url</td>
-      <td>NaN</td>
-      <td>http://WWW.5itest.cn</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <td>register_005</td>
-      <td>×¢²á</td>
-      <td>µÈ´ý</td>
-      <td>no</td>
-      <td>sleep_time</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <td>register_006</td>
-      <td>×¢²á</td>
-      <td>¹Ø±Õ</td>
-      <td>yes</td>
-      <td>close_browser</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>NaN</td>
+      <td>pass</td>
     </tr>
   </tbody>
 </table>
