--- a/report/report.html
+++ b/report/report.html
@@ -200,9 +200,9 @@
         
     <div class='page-header'>
         <h1>Mushishi</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2021-07-12 19:28:59</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:26.408950</p>
-<p class='attribute'><strong>状态:</strong> 通过 13</p>
+    <p class='attribute'><strong>开始时间:</strong> 2021-07-13 15:15:48</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:30.782376</p>
+<p class='attribute'><strong>状态:</strong> 通过 11 失败 2</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'>this is test</p></div>
@@ -233,22 +233,22 @@
             <td>查看</td>
         </tr>
         
-    <tr class='passClass'>
+    <tr class='failClass'>
         <td>keyword_case2.TestKeywordCase</td>
         <td>13</td>
-        <td>13</td>
-        <td>0</td>
+        <td>11</td>
+        <td>2</td>
         <td>0</td>
         <td><a href="javascript:showClassDetail('c1',13)">详情</a></td>
     </tr>
 
 <tr id='pt1.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_01___CaseID____模块名字____操作____是否执行____执行方法____输入的数据____操作元素____预期结果____实际结果____report__</div></td>
+    <td class='none'><div class='testcase'>test_run_main_01___CaseID____模块名字____操作____是否执行____执行方法____输入的数据____操作元素____预期结果____实际结果____report____行号__</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt1.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_02___register_003____注册____打开浏览器____yes____open_browser________chrome______________</div></td>
+    <td class='none'><div class='testcase'>test_run_main_02___register_003____注册____打开浏览器____yes____open_browser________chrome____________pass___1_0_</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
@@ -265,12 +265,12 @@
 </tr>
 
 <tr id='pt1.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_03___register_004____________yes____get_url________https___flo_baochuangames_com_____get_title____text__sad_______</div></td>
+    <td class='none'><div class='testcase'>test_run_main_03___register_004____________yes____get_url________https___flo_baochuangames_com_____get_title____text_幻想生活____pass___2_0_</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt1.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_04___register_005____注册____输入____yes____close_browser______________________</div></td>
+    <td class='none'><div class='testcase'>test_run_main_04___register_005____注册____输入____yes____close_browser____________________pass___3_0_</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
@@ -287,7 +287,7 @@
 </tr>
 
 <tr id='pt1.5' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_05___register_003____注册____打开浏览器____yes____open_browser________chrome______________</div></td>
+    <td class='none'><div class='testcase'>test_run_main_05___register_006____注册____打开浏览器____yes____open_browser________chrome____________pass___4_0_</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
@@ -304,12 +304,12 @@
 </tr>
 
 <tr id='pt1.6' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_06___register_004____________yes____get_url________https___flo_baochuangames_com_____get_title____text__sad_______</div></td>
+    <td class='none'><div class='testcase'>test_run_main_06___register_007____________yes____get_url________https___flo_baochuangames_com_____get_title____text_幻想生活____pass___5_0_</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt1.7' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_07___register_005____注册____输入____yes____close_browser______________________</div></td>
+    <td class='none'><div class='testcase'>test_run_main_07___register_008____注册____输入____yes____close_browser____________________pass___6_0_</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
@@ -326,7 +326,7 @@
 </tr>
 
 <tr id='pt1.8' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_08___register_003____注册____打开浏览器____yes____open_browser________chrome______________</div></td>
+    <td class='none'><div class='testcase'>test_run_main_08___register_009____注册____打开浏览器____yes____open_browser________chrome____________pass___7_0_</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
@@ -342,13 +342,30 @@
     </td>
 </tr>
 
-<tr id='pt1.9' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_09___register_004____________yes____get_url________https___flo_baochuangames_com_____get_title____text__sad_______</div></td>
-    <td colspan='5' align='center'>通过</td>
+<tr id='ft1.9' class='none'>
+    <td class='failCase'><div class='testcase'>test_run_main_09___register_010____________yes____get_url________https___flo_baochuangames_com_____get_title____text_sasd____fail___8_0_</div></td>
+    <td colspan='5' align='center'>
+
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.9')" >
+        失败</a>
+
+    <div id='div_ft1.9' class="popup_window">
+        <pre>ft1.9: Traceback (most recent call last):
+  File "C:\Users\s4715\AppData\Local\Programs\Python\Python37\lib\site-packages\ddt.py", line 182, in wrapper
+    return func(self, *args, **kwargs)
+  File "D:\jf\UItest\case\keyword_case2.py", line 63, in test_run_main
+    assert (data[9]=='pass')
+AssertionError
+</pre>
+    </div>
+    <!--css div popup end-->
+
+    </td>
 </tr>
 
 <tr id='pt1.10' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_10___register_005____注册____输入____yes____close_browser______________________</div></td>
+    <td class='none'><div class='testcase'>test_run_main_10___register_011____注册____输入____yes____close_browser____________________pass___9_0_</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
@@ -365,7 +382,7 @@
 </tr>
 
 <tr id='pt1.11' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_11___register_003____注册____打开浏览器____yes____open_browser________chrome______________</div></td>
+    <td class='none'><div class='testcase'>test_run_main_11___register_012____注册____打开浏览器____yes____open_browser________chrome____________pass___10_0_</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
@@ -381,13 +398,30 @@
     </td>
 </tr>
 
-<tr id='pt1.12' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_12___register_004____________yes____get_url________https___flo_baochuangames_com_____get_title____text__sad_______</div></td>
-    <td colspan='5' align='center'>通过</td>
+<tr id='ft1.12' class='none'>
+    <td class='failCase'><div class='testcase'>test_run_main_12___register_013____________yes____get_url________https___flo_baochuangames_com_____get_title____text_nons____fail___11_0_</div></td>
+    <td colspan='5' align='center'>
+
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.12')" >
+        失败</a>
+
+    <div id='div_ft1.12' class="popup_window">
+        <pre>ft1.12: Traceback (most recent call last):
+  File "C:\Users\s4715\AppData\Local\Programs\Python\Python37\lib\site-packages\ddt.py", line 182, in wrapper
+    return func(self, *args, **kwargs)
+  File "D:\jf\UItest\case\keyword_case2.py", line 63, in test_run_main
+    assert (data[9]=='pass')
+AssertionError
+</pre>
+    </div>
+    <!--css div popup end-->
+
+    </td>
 </tr>
 
 <tr id='pt1.13' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_run_main_13___register_005____注册____输入____yes____close_browser____________________fail__</div></td>
+    <td class='none'><div class='testcase'>test_run_main_13___register_014____注册____输入____yes____close_browser____________________pass___12_0_</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
@@ -406,8 +440,8 @@
         <tr id='total_row'>
             <td>总计</td>
             <td>13</td>
-            <td>13</td>
-            <td>0</td>
+            <td>11</td>
+            <td>2</td>
             <td>0</td>
             <td>&nbsp;</td>
         </tr>
@@ -442,8 +476,8 @@
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:13, name:'通过'},
-                        {value:0, name:'失败'},
+                        {value:11, name:'通过'},
+                        {value:2, name:'失败'},
                         {value:0, name:'错误'}
                     ],
                     itemStyle: {
