--- a/report/report.html/测试报告.html
+++ b/report/report.html/测试报告.html
@@ -7159,13 +7159,13 @@ body.skin-3 {
 
 
     var resultData = {
-    "testPass": 1,
+    "testPass": 8,
     "testResult": [
         {
             "className": "TestKeywordCase",
             "methodName": "test_run_main_01___CaseID____模块名字____操作____是否执行____执行方法____输入的数据____操作元素____预期结果____实际结果____report____行号__",
             "description": null,
-            "spendTime": "0.00127 s",
+            "spendTime": "0.0 s",
             "status": "成功",
             "log": [
                 "CaseID",
@@ -7174,25 +7174,21 @@ body.skin-3 {
         },
         {
             "className": "TestKeywordCase",
-            "methodName": "test_run_main_02___幻想生活_001____检查首页____打开浏览器____yes____open_browser________chrome_______________1_0_",
+            "methodName": "test_run_main_02___幻想生活_001____检查首页____打开浏览器____yes____open_browser________chrome____________pass___1_0_",
             "description": null,
             "spendTime": "2.17 s",
-            "status": "失败",
+            "status": "成功",
             "log": [
-                "幻想生活_001\n操作过程用例：open_browserchrome\n",
-                "Traceback (most recent call last):\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 59, in testPartExecutor\n    yield\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 615, in run\n    testMethod()\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ddt.py\", line 182, in wrapper\n    return func(self, *args, **kwargs)\n",
-                "  File \"D:\\jf\\UItest\\case\\keyword_case2.py\", line 64, in test_run_main\n    assert (report=='pass')\n",
-                "AssertionError\n"
+                "幻想生活_001",
+                "操作过程用例：幻想生活_001",
+                ""
             ]
         },
         {
             "className": "TestKeywordCase",
-            "methodName": "test_run_main_03___幻想生活_002____检查首页________yes____get_url________https___flo_baochuangames_com_____get_title____text_幻想生活_______2_0_",
+            "methodName": "test_run_main_03___幻想生活_002____检查首页________yes____get_url________https___flo_baochuangames_com_____get_title____text_幻想生活____fail___2_0_",
             "description": null,
-            "spendTime": "1.4 s",
+            "spendTime": "1.96 s",
             "status": "失败",
             "log": [
                 "幻想生活_002\n",
@@ -7206,110 +7202,72 @@ body.skin-3 {
         },
         {
             "className": "TestKeywordCase",
-            "methodName": "test_run_main_04___幻想生活_003____检查首页____关闭浏览器____yes____close_browser_______________________3_0_",
+            "methodName": "test_run_main_04___幻想生活_003____检查首页____关闭浏览器____yes____close_browser____________________pass___3_0_",
             "description": null,
-            "spendTime": "5.11 s",
-            "status": "失败",
+            "spendTime": "1.11 s",
+            "status": "成功",
             "log": [
-                "幻想生活_003\n操作过程用例：close_browser\n",
-                "Traceback (most recent call last):\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 59, in testPartExecutor\n    yield\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 615, in run\n    testMethod()\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ddt.py\", line 182, in wrapper\n    return func(self, *args, **kwargs)\n",
-                "  File \"D:\\jf\\UItest\\case\\keyword_case2.py\", line 64, in test_run_main\n    assert (report=='pass')\n",
-                "AssertionError\n"
+                "幻想生活_003",
+                "操作过程用例：幻想生活_003",
+                ""
             ]
         },
         {
             "className": "TestKeywordCase",
-            "methodName": "test_run_main_05___随机点数大师_001____检查首页____打开浏览器____yes____open_browser________chrome_______________4_0_",
+            "methodName": "test_run_main_05___随机点数大师_001____检查首页____打开浏览器____yes____open_browser________chrome____________pass___4_0_",
             "description": null,
             "spendTime": "2.16 s",
-            "status": "失败",
+            "status": "成功",
             "log": [
-                "随机点数大师_001\n操作过程用例：open_browserchrome\n",
-                "Traceback (most recent call last):\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 59, in testPartExecutor\n    yield\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 615, in run\n    testMethod()\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ddt.py\", line 182, in wrapper\n    return func(self, *args, **kwargs)\n",
-                "  File \"D:\\jf\\UItest\\case\\keyword_case2.py\", line 64, in test_run_main\n    assert (report=='pass')\n",
-                "AssertionError\n"
+                "随机点数大师_001",
+                "操作过程用例：随机点数大师_001",
+                ""
             ]
         },
         {
             "className": "TestKeywordCase",
-            "methodName": "test_run_main_06___随机点数大师_002____检查首页________yes____get_url________https___rd_baochuangames_com_____get_title____text__随机点数大师_官方网站_预约领豪华礼包_欢迎来到全民随机塔防时代_______5_0_",
+            "methodName": "test_run_main_06___随机点数大师_002____检查首页________yes____get_url________https___rd_baochuangames_com_____get_title____text__随机点数大师_官方网站_预约领豪华礼包_欢迎来到全民随机塔防时代____pass___5_0_",
             "description": null,
-            "spendTime": "2.22 s",
-            "status": "失败",
+            "spendTime": "2.03 s",
+            "status": "成功",
             "log": [
-                "随机点数大师_002\n",
-                "Traceback (most recent call last):\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 59, in testPartExecutor\n    yield\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 615, in run\n    testMethod()\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ddt.py\", line 182, in wrapper\n    return func(self, *args, **kwargs)\n",
-                "  File \"D:\\jf\\UItest\\case\\keyword_case2.py\", line 64, in test_run_main\n    assert (report=='pass')\n",
-                "AssertionError\n"
+                "随机点数大师_002",
+                ""
             ]
         },
         {
             "className": "TestKeywordCase",
-            "methodName": "test_run_main_07___随机点数大师_003____检查新闻列表____点击更多____yes____jsclick_element________rd_more_______________6_0_",
+            "methodName": "test_run_main_07___随机点数大师_003____检查新闻列表____点击更多____yes____jsclick_element________rd_more____________pass___6_0_",
             "description": null,
-            "spendTime": "1.02 s",
-            "status": "失败",
+            "spendTime": "3.04 s",
+            "status": "成功",
             "log": [
-                "随机点数大师_003\nD:\\jf\\UItest\\log\\logs/2021-07-23.log\n..\n操作过程用例：jsclick_elementrd_more\n",
-                "Traceback (most recent call last):\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 59, in testPartExecutor\n    yield\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 615, in run\n    testMethod()\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ddt.py\", line 182, in wrapper\n    return func(self, *args, **kwargs)\n",
-                "  File \"D:\\jf\\UItest\\case\\keyword_case2.py\", line 64, in test_run_main\n    assert (report=='pass')\n",
-                "AssertionError\n"
+                "随机点数大师_003",
+                "D:\\jf\\UItest\\log\\logs/2021-07-23.log",
+                "..",
+                "操作过程用例：随机点数大师_003",
+                ""
             ]
         },
         {
             "className": "TestKeywordCase",
-            "methodName": "test_run_main_08___随机点数大师_004____检查新闻列表____检查url____yes____sleep_time____________get_urltitle____text_https___rd_baochuangames_com_news_______7_0_",
+            "methodName": "test_run_main_08___随机点数大师_004____检查新闻列表____检查url____yes____sleep_time____________get_urltitle____text_https___rd_baochuangames_com_news____pass___7_0_",
             "description": null,
-            "spendTime": "4.02 s",
-            "status": "失败",
+            "spendTime": "4.03 s",
+            "status": "成功",
             "log": [
-                "随机点数大师_004\n",
-                "Traceback (most recent call last):\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 59, in testPartExecutor\n    yield\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 615, in run\n    testMethod()\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ddt.py\", line 182, in wrapper\n    return func(self, *args, **kwargs)\n",
-                "  File \"D:\\jf\\UItest\\case\\keyword_case2.py\", line 64, in test_run_main\n    assert (report=='pass')\n",
-                "AssertionError\n"
+                "随机点数大师_004",
+                ""
             ]
         },
         {
             "className": "TestKeywordCase",
             "methodName": "test_run_main_09___随机点数大师_005____检查新闻详情____打开第一篇新闻____yes____click_element________rd_one_new_______________8_0_",
             "description": null,
-            "spendTime": "0.0105 s",
-            "status": "错误",
-            "log": [
-                "随机点数大师_005\nD:\\jf\\UItest\\log\\logs/2021-07-23.log\n..\n",
-                "Traceback (most recent call last):\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 59, in testPartExecutor\n    yield\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 615, in run\n    testMethod()\n",
-                "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ddt.py\", line 182, in wrapper\n    return func(self, *args, **kwargs)\n",
-                "  File \"D:\\jf\\UItest\\case\\keyword_case2.py\", line 43, in test_run_main\n    action_method.run_method(method, send_value, handle_value)\n",
-                "  File \"D:\\jf\\UItest\\keywordselenium\\actionMethod.py\", line 80, in run_method\n    result = method_value(handle_value)\n",
-                "  File \"D:\\jf\\UItest\\keywordselenium\\actionMethod.py\", line 40, in click_element\n    self.get_element(key).click()\n",
-                "AttributeError: 'NoneType' object has no attribute 'click'\n"
-            ]
-        },
-        {
-            "className": "TestKeywordCase",
-            "methodName": "test_run_main_10___随机点数大师_006____检查新闻详情____检查第一篇新闻标题____yes____get_url________https___rd_baochuangames_com_news_1696_______________9_0_",
-            "description": null,
-            "spendTime": "1.22 s",
+            "spendTime": "1.07 s",
             "status": "失败",
             "log": [
-                "随机点数大师_006\n操作过程用例：get_urlhttps://rd.baochuangames.com/news/1696\n",
+                "随机点数大师_005\nD:\\jf\\UItest\\log\\logs/2021-07-23.log\n..\n操作过程用例：随机点数大师_005\n",
                 "Traceback (most recent call last):\n",
                 "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 59, in testPartExecutor\n    yield\n",
                 "  File \"C:\\Users\\s4715\\AppData\\Local\\Programs\\Python\\Python37\\lib\\unittest\\case.py\", line 615, in run\n    testMethod()\n",
@@ -7317,13 +7275,25 @@ body.skin-3 {
                 "  File \"D:\\jf\\UItest\\case\\keyword_case2.py\", line 64, in test_run_main\n    assert (report=='pass')\n",
                 "AssertionError\n"
             ]
+        },
+        {
+            "className": "TestKeywordCase",
+            "methodName": "test_run_main_10___随机点数大师_006____检查新闻详情____检查第一篇新闻标题____yes____get_url________https___rd_baochuangames_com_news_1696____________pass___9_0_",
+            "description": null,
+            "spendTime": "1.15 s",
+            "status": "成功",
+            "log": [
+                "随机点数大师_006",
+                "操作过程用例：随机点数大师_006",
+                ""
+            ]
         }
     ],
     "testName": "测试",
     "testAll": 10,
-    "testFail": 9,
-    "beginTime": "2021-07-23 12:42:37",
-    "totalTime": "20s",
+    "testFail": 2,
+    "beginTime": "2021-07-23 13:10:13",
+    "totalTime": "19s",
     "testSkip": 0,
     "testError": 0
 };
